--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10377,4 +10377,8 @@ These options are activated:
     <value>Adjust for flexible days off</value>
     <comment>ExtendReduceDaysoffForFlexibleAgents</comment>
   </data>
+  <data name="ThisIsTheDefaultScenario" xml:space="preserve">
+    <value>This is the default scenario</value>
+    <comment>This is the default scenario</comment>
+  </data>
 </root>
