updated FörfrågningsPeriod text to Förfrågningsperiod

--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/ReportTexts/Resources.sv.resx
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/ReportTexts/Resources.sv.resx
@@ -1164,7 +1164,7 @@
     <comment>Ansökningsdatum</comment>
   </data>
   <data name="ResRequestPeriod" xml:space="preserve">
-    <value>FörfrågningsPeriod</value>
-    <comment>FörfrågningsPeriod</comment>
+    <value>Förfrågningsperiod</value>
+    <comment>Förfrågningsperiod</comment>
   </data>
 </root>
