--- a/Teleopti.Ccc.UserTexts/Resources.sv.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.sv.resx
@@ -10081,4 +10081,8 @@ Licensen heter "{3}" och har dessa tillval aktiverade:
     <value>Det här är standardscenariot</value>
     <comment>Det här är standardscenariot</comment>
   </data>
+  <data name="RequestDenyReasonAlreadyAbsent" xml:space="preserve">
+    <value>Det finns redan frånvaro registrerad under angiven period.</value>
+    <comment>There is already absence in the schedule for given period.</comment>
+  </data>
 </root>
