--- a/Teleopti.Ccc.UserTexts/Resources.sv.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.sv.resx
@@ -10085,4 +10085,7 @@ Licensen heter "{3}" och har dessa tillval aktiverade:
     <value>Det finns redan frånvaro registrerad under angiven period.</value>
     <comment>There is already absence in the schedule for given period.</comment>
   </data>
+  <data name="BrowserDefault" xml:space="preserve">
+    <value>&lt;Webbläsarens default&gt;</value>
+  </data>
 </root>
