--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10390,6 +10390,7 @@ These options are activated:
   <data name="RequestDenyReasonAlreadyAbsent" xml:space="preserve">
     <value>There is already absence in the schedule for given period.</value>
     <comment>There is already absence in the schedule for given period.</comment>
+    </data>
   <data name="CustomReports" xml:space="preserve">
     <value>Custom reports</value>
     <comment>Custom reports</comment>
