Anders wish (my profile): Culture should be Date Format

--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10390,7 +10390,7 @@ These options are activated:
   <data name="RequestDenyReasonAlreadyAbsent" xml:space="preserve">
     <value>There is already absence in the schedule for given period.</value>
     <comment>There is already absence in the schedule for given period.</comment>
-    </data>
+  </data>
   <data name="CustomReports" xml:space="preserve">
     <value>Custom reports</value>
     <comment>Custom reports</comment>
@@ -10406,5 +10406,8 @@ These options are activated:
   </data>
   <data name="Updated" xml:space="preserve">
     <value>Updated</value>
+  </data>
+  <data name="DateFormat" xml:space="preserve">
+    <value>Date Format</value>
   </data>
 </root>
