--- a/Teleopti.Ccc.UserTexts/Resources.sv.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.sv.resx
@@ -10084,7 +10084,7 @@ Licensen heter "{3}" och har dessa tillval aktiverade:
   <data name="RequestDenyReasonAlreadyAbsent" xml:space="preserve">
     <value>Det finns redan frånvaro registrerad under angiven period.</value>
     <comment>There is already absence in the schedule for given period.</comment>
-    </data>
+  </data>
   <data name="CustomReports" xml:space="preserve">
     <value>Kundanpassade rapporter</value>
     <comment>CustomReports</comment>
@@ -10100,5 +10100,8 @@ Licensen heter "{3}" och har dessa tillval aktiverade:
   </data>
   <data name="Updated" xml:space="preserve">
     <value>Uppdaterad</value>
+  </data>
+  <data name="DateFormat" xml:space="preserve">
+    <value>Datumformat</value>
   </data>
 </root>
