made language and culture listboxes jquery-ui selectboxes...

--- a/Teleopti.Ccc.UserTexts/Resources.sv.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.sv.resx
@@ -10093,7 +10093,7 @@ Licensen heter "{3}" och har dessa tillval aktiverade:
     <value>Fler agenter ({0}) än din licens tillåter ({1}) är aktiva. Du har nu {2} dagar på dig att minska antalet agenter eller lägga på en licens som täcker tillräckligt många.</value>
   </data>
   <data name="BrowserDefault" xml:space="preserve">
-    <value>&lt;Webbläsarens default&gt;</value>
+    <value>-- Webbläsarens default --</value>
   </data>
   <data name="PasswordOld" xml:space="preserve">
     <value>Gammalt lösenord</value>
