--- a/Win/Permissions/PermissionsExplorer.resx
+++ b/Win/Permissions/PermissionsExplorer.resx
@@ -231,4 +231,7 @@
   <metadata name="toolStripExViewer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>678, 17</value>
   </metadata>
+  <metadata name="imageListAdv1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>825, 17</value>
+  </metadata>
 </root>
